commit new rest service
Rest service For Movie

--- a/WcfRest/WcfRest/Web.config
+++ b/WcfRest/WcfRest/Web.config
@@ -21,11 +21,12 @@
     </bindings>
     <services>
       <service name="WcfRest.Service1">
-        <endpoint address="" binding="webHttpBinding"  bindingConfiguration="webrestService" contract="WcfRest.IService1" behaviorConfiguration="web" />
+        <endpoint address="" binding="webHttpBinding" 
+                  bindingConfiguration="webrestService" contract="WcfRest.IService1" behaviorConfiguration="web" />
       </service>
-      
+
     </services>
-    <behaviors>       
+    <behaviors>
       <endpointBehaviors>
         <behavior name="web">
           <webHttp helpEnabled="true"/>
@@ -41,8 +42,8 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https"/>
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
