--- a/WcfRest/WcfRest/bin/WcfRest.dll.config
+++ b/WcfRest/WcfRest/bin/WcfRest.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <appSettings>
@@ -21,21 +21,26 @@
     </bindings>
     <services>
       <service name="WcfRest.Service1">
-        <endpoint address="" binding="webHttpBinding" bindingConfiguration="webrestService" contract="WcfRest.IService1" behaviorConfiguration="web" />
+        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding"
+          bindingConfiguration="webrestService" contract="WcfRest.IService1" />
       </service>
-
+      <service name="WcfRest.Service2">
+        <endpoint address="" behaviorConfiguration="WcfRest.Service2AspNetAjaxBehavior"
+          binding="webHttpBinding" contract="WcfRest.Service2" />
+      </service>
     </services>
     <behaviors>
       <endpointBehaviors>
         <behavior name="web">
           <webHttp helpEnabled="true" />
         </behavior>
+        <behavior name="WcfRest.Service2AspNetAjaxBehavior">
+          <enableWebScript />
+        </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
+        <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
@@ -43,7 +48,8 @@
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
