--- a/WcfRest/studentapiusingmongoDB/studentapiusingmongoDB.csproj
+++ b/WcfRest/studentapiusingmongoDB/studentapiusingmongoDB.csproj
@@ -135,6 +135,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="App_Data\StudentDB\Student.json" />
+    <Content Include="App_Data\StudentDB\UserLogin.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
